--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -1,4 +1,3 @@
-<%@page contentType="text/html;charset=UTF-8" isErrorPage="true"%>
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,7 +5,7 @@
     <title>错误页面</title>
   </head>
   <body>
-  <span>没有权限不能访问，请登录！</span>
+  <span>没有权限访问,请登录！</span>
   <br>
   </body>
 </html>
